Fix jumping on modal open

--- a/app/assets/stylesheets/shared.scss
+++ b/app/assets/stylesheets/shared.scss
@@ -31,7 +31,7 @@ body {
     background-size: cover;
   }
 
-  &.with-overlay, &.ReactModal__Body--open {
+  &.with-overlay {
     overflow: hidden;
   }
 }
